--- a/TTT/TTT.csproj
+++ b/TTT/TTT.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
